--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       flex-direction: column;
       background: linear-gradient(135deg, #ff9a9e, #fecfef);
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      color: #fff;
+      color: #2b1b24;
       text-align: center;
     }
 
