--- a/index.html
+++ b/index.html
@@ -1,42 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Will you be my Valentine?</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Be my Valentine?</title>
   <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+    :root { color-scheme: light; }
+    body{
+      margin:0;
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       background: linear-gradient(135deg, #ff9a9e, #fecfef);
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      color: #2b1b24;
-      text-align: center;
+      color:#1b1020; /* dark text so it’s visible */
+      text-align:center;
+      padding:24px;
     }
-
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
+    .card{
+      width:min(560px, 92vw);
+      background: rgba(255,255,255,0.75);
+      border: 1px solid rgba(0,0,0,0.08);
+      border-radius: 18px;
+      padding: 22px 18px;
+      box-shadow: 0 12px 40px rgba(0,0,0,0.12);
+      backdrop-filter: blur(8px);
     }
-
-    p {
-      font-size: 1.1rem;
-      max-width: 520px;
-      margin: 0 1rem 2rem;
-      line-height: 1.4;
+    h1{ margin: 0 0 8px; font-size: 2rem; }
+    p{ margin: 0 0 18px; line-height: 1.45; }
+    .buttons{ display:flex; gap:12px; justify-content:center; flex-wrap:wrap; }
+    button{
+      border:0;
+      border-radius:999px;
+      padding: 10px 18px;
+      font-size: 1rem;
+      cursor:pointer;
     }
+    #yes{ background:#ff2f6d; color:#fff; }
+    #no{ background:#fff; color:#ff2f6d; border:1px solid rgba(0,0,0,0.1); }
+    #msg{ display:none; margin-top:16px; font-weight:700; }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <h1>Will you be my Valentine?</h1>
+    <p>I like spending time with you. Want to make 14 Feb special together?</p>
 
-    .buttons {
-      display: flex;
-      gap: 1rem;
-      position: relative;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
+    <div class="buttons">
+      <button id="yes">Yes 💗</button>
+      <button id="no">No 😅</button>
+    </div>
 
-    button {
-      pad
+    <div id="msg">Yay!! 💘 Text me your free time and I’ll plan something nice.</div>
+  </div>
+
+  <script>
+    const yes = document.getElementById("yes");
+    const no = document.getElementById("no");
+    const msg = document.getElementById("msg");
+
+    yes.addEventListener("click", () => {
+      msg.style.display = "block";
+      no.style.display = "none";
+      yes.textContent = "Yay 💞";
+    });
+
+    // optional: make "No" dodge
+    no.addEventListener("mouseover", () => {
+      const x = (Math.random() - 0.5) * 240;
+      const y = (Math.random() - 0.5) * 160;
+      no.style.transform = `translate(${x}px, ${y}px)`;
+    });
+  </script>
+</body>
+</html>
