--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       justify-content:center;
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       background: linear-gradient(135deg, #ff9a9e, #fecfef);
-      color:#1b1020; /* dark text so it’s visible */
+      color:#1b1020;
       text-align:center;
       padding:24px;
     }
@@ -43,6 +43,10 @@
   </style>
 </head>
 <body>
+  <div style="position:fixed;top:10px;left:10px;background:#fff;color:#111;padding:6px 10px;border-radius:10px;z-index:9999;font-weight:700">
+    VERSION 9:54PM
+  </div>
+
   <div class="card">
     <h1>Will you be my Valentine?</h1>
     <p>I like spending time with you. Want to make 14 Feb special together?</p>
@@ -66,7 +70,6 @@
       yes.textContent = "Yay 💞";
     });
 
-    // optional: make "No" dodge
     no.addEventListener("mouseover", () => {
       const x = (Math.random() - 0.5) * 240;
       const y = (Math.random() - 0.5) * 160;
